--- a/src/stylesheets/css/Lungo.widgets.button.css
+++ b/src/stylesheets/css/Lungo.widgets.button.css
@@ -1,4 +1,5 @@
-a.button{display:inline-block;height:30px;padding:0 9px 0 8px;color:#fff !important;outline:none;background:#5a5a5a;-webkit-user-select:none;user-select:none;line-height:32px;text-align:center;text-decoration:none;}a.button:active,a.button.active{background:#4b4b4b;}
+a.button{display:inline-block;height:30px;padding:0 9px 0 8px;color:#fff !important;outline:none;background:#5a5a5a;-webkit-user-select:none;user-select:none;line-height:31px;text-align:center;text-decoration:none;}a.button:active,a.button.active{background:#4b4b4b;}
 a.button:disabled,a.button.disabled{background:rgba(255, 255, 255, 0.2);color:#999 !important;}
-a.button .icon{float:left;font-size:1.5em;line-height:32px;}
-a.button.big{position:relative;width:100%;margin-bottom:4px;padding:6px 0;font-size:16px;line-height:32px;}a.button.big .icon{display:inline-block;float:none;margin-right:4px;line-height:14px;}
+a.button .icon{position:relative;top:3px;height:16px;width:16px;font-size:22px;line-height:17px;}
+a.button img{top:0px !important;}
+a.button.big{width:100%;height:40px;padding:0px;margin-bottom:4px;font-size:16px;line-height:42px;}a.button.big .icon{margin-right:4px;font-size:24px;height:18px;width:18px;}
