--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -19,7 +19,7 @@ a.button {
 	background: #5a5a5a;
 	
 	.user-select(none);
-	line-height: 32px;
+	line-height: 31px;
 	text-align: center; 
 	text-decoration: none;
 
@@ -33,25 +33,31 @@ a.button {
 	}
 	
 	& .icon {
-    	float: left;	
-		font-size: 1.5em;
-		line-height: 32px;
+		position: relative;
+		top: 3px;
+		height: 16px;
+		width: 16px;
+    	font-size: 22px;
+		line-height: 17px;
+	}
+	
+	& img {
+		top:  0px !important;    	
 	}
 	
 	&.big {
-    	position: relative; 
 		width: 100%; 
+		height: 40px;	
+		padding: 0px;	
 		margin-bottom: 4px;
-		padding: 6px 0;
 		
 		font-size: 16px;
-		line-height: 32px;
-		
+		line-height: 42px;
 		& .icon {
-			display: inline-block;
-			float: none;
-			margin-right: 4px;			
-			line-height: 14px;
+			margin-right: 4px;	
+			font-size: 24px;
+			height: 18px;
+			width: 18px;
 		}
 	}
 }
