--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -201,19 +201,22 @@ aside {
 		height: 40px;
 		padding: 0 6px;
 	
-		font-size: 1.1em;
-		font-weight: bold;
+		font-size: 15px;
 		line-height: 40px;
-	}
+		overflow: hidden;
+   		white-space: nowrap;
+  		text-overflow: ellipsis;
+  	}
 		aside .icon {
-			width: 28px;
-			height: 28px;
+			width: 24px;
+			//height: 28px;
 			float: left;
-			margin: 8px 6px 0 0;
-	
-		    font-size: 1.9em;
-		    line-height: 1.0em;
+			margin: 8px 4px 0 0;
+		
+			font-size: 24px;
+			line-height: 24px;
 		    text-align: center;
+		    
 		}
 		aside .anchor {
 			font-weight: bold;
@@ -221,6 +224,7 @@ aside {
 		}
 		aside .bubble {
 	    	float: right;
+	    	font-size: 11px;
 			margin: 12px 4px 0 0;
 		}
 	
