--- a/src/stylesheets/css/Lungo.theme.pro.css
+++ b/src/stylesheets/css/Lungo.theme.pro.css
@@ -64,7 +64,6 @@ nav a.current, nav a.active {
 /* @group <aside> */
 aside {
   background: #252525;
-  box-shadow: inset -1px 0 4px rgba(0, 0, 0, 0.2);
 }
 aside a {
   color: #fff;
@@ -84,6 +83,12 @@ aside a .icon {
 aside .anchor {
   background: #101010;
   color: #7a7a7a;
+}
+section.aside {
+  box-shadow: -4px 0 8px rgba(0, 0, 0, 0.5);
+}
+section.aside.onright {
+  box-shadow: 4px 0 8px rgba(0, 0, 0, 0.5);
 }
 /* @end */
 /* @group .list */
