--- a/src/stylesheets/less/Lungo.layout.nav.less
+++ b/src/stylesheets/less/Lungo.layout.nav.less
@@ -97,13 +97,16 @@ nav {
 
 .groupbar {
 	position: absolute;
-	top: 39px;    
- 	height: 34px;
-    width: 100%;
-    line-height: 34px;
+	top: 39px;
+	height: 28px;
+	width: 100%;
+	padding: 4px 0 2px;	
+ 	display: block; 
+    line-height: 28px;
+    z-index: 2;
     
     & a {
     	padding: 0px;
-	}
+}
 }
 /* @end */
