--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -1,9 +1,9 @@
 section{position:absolute;left:0px;top:0px;width:100%;height:100%;z-index:1;-webkit-transform:translate3d(100%, 0, 0);transform:translate3d(100%, 0, 0);-webkit-backface-visibility:hidden;-webkit-transition:-webkit-transform 250ms cubic-bezier(0.39, 0.575, 0.565, 1);}section:first-child,section.show{-webkit-transform:translate3d(0%, 0, 0);transform:translate3d(0%, 0, 0);}
 section.hide{-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0);}
 header,footer{position:absolute;left:0px;width:100%;height:38px;display:block;z-index:2;line-height:39px;}
-header{top:0px;}
+header{top:0px;}header .onleft{margin-left:4px !important;}
+header .onright{margin-right:4px !important;}
 footer{bottom:0px;}
 header .title,footer .title{margin:0 4px;float:left;z-index:-1;font-size:15px;font-weight:bold;}
 header .title{position:absolute;left:0px;right:0px;text-align:center;display:inline-block;}
-section header a.button,section footer a.button{margin:3px 0 0 1px;}section header a.button:first-of-type,section footer a.button:first-of-type{margin-left:4px;}
-section header a.button:last-child,section footer a.button:last-child{margin-right:4px;}
+section header a.button,section footer a.button{margin:3px 1px 0px;}
