--- a/src/stylesheets/css/Lungo.theme.pro.css
+++ b/src/stylesheets/css/Lungo.theme.pro.css
@@ -51,14 +51,14 @@ nav a.current, nav a.active {
 }
 .groupbar {
   background: #ededed;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 .groupbar a {
   color: #6e6e6e;
 }
 .groupbar a.current {
   color: #6e6e6e;
-  box-shadow: inset 0 -4px 0 #05bde9;
+  border-bottom: solid 3px #05bde9;
 }
 /* @end */
 /* @group <aside> */
