--- a/src/stylesheets/less/Lungo.layout.aside.less
+++ b/src/stylesheets/less/Lungo.layout.aside.less
@@ -15,7 +15,6 @@
 @footer_toolbar_height: 48px;
 
 /* @group <aside> */
-
 section.aside {
 	.transform(translate3d(256px, 0, 0));
 	&.onright { .transform(translate3d(-256px, 0, 0)); }
@@ -35,6 +34,20 @@ aside {
 	&.onright { right: 0px; }
 	&.current { visibility: visible;} 
 }
+
+header:not(.extended) ~ aside { top: @header_footer_height; }    
+header.extended ~ aside { top: @header_extended_height; }        
+footer ~ aside { 
+        bottom: @header_footer_height; 
+        height: auto; 
+    }
+        footer.toolbar ~ aside { bottom: @footer_toolbar_height; }
+    
+    aside ~ article {
+        .transform(translate3d(0px, 0, 0));
+        -webkit-transition: -webkit-transform 250ms @defaultTrasition;
+    }
+
 
 	aside a {
 		display: block;
