--- a/src/stylesheets/less/Lungo.theme.pro.less
+++ b/src/stylesheets/less/Lungo.theme.pro.less
@@ -43,8 +43,7 @@ footer {
 }
 
 article { 
-	background-color: #ededed; 
-	
+	background-color: #ededed; 	
 	& .title {
     	color: #797979;
     	text-shadow: 0px 1px 0px #fff;
@@ -69,14 +68,14 @@ nav a {
 }
 
 .groupbar {
-    background: #ededed;  
-    box-shadow: 0 1px 0 rgba(0,0,0,0.1);
+    background: #ededed;
+    border-bottom: solid 1px rgba(0,0,0,0.1);
     
     & a {
     	color: #6e6e6e;
     	&.current {
 			color: #6e6e6e;
-    		box-shadow: inset 0 -4px 0 @theme-light;
+			border-bottom: solid 3px @theme-light;
     	}
 	}
 }
