Refactor in stylesheets

--- a/src/stylesheets/css/Lungo.layout.article.css
+++ b/src/stylesheets/css/Lungo.layout.article.css
@@ -1,5 +1,4 @@
-article{position:absolute;width:inherit;height:auto;top:0px;bottom:0px;visibility:hidden;z-index:0;}article.current{visibility:visible;z-index:1;}
-article.aside{-webkit-transform:translate3d(256px, 0, 0);transform:translate3d(256px, 0, 0);}
+article{position:absolute;width:100% !important;height:auto;top:0px;bottom:0px;visibility:hidden;z-index:0;}article.current{visibility:visible;z-index:1;}
 article .title{font-size:1.1em;margin:0px 0 4px;}article .title .icon{margin-right:4px;}
 article .text{margin:4px 0 8px;display:block;font-size:0.9em;font-weight:normal;line-height:1.4em;}
 header:not(.extended)~article{top:40px;}
