--- a/src/stylesheets/less/Lungo.layout.article.less
+++ b/src/stylesheets/less/Lungo.layout.article.less
@@ -17,7 +17,7 @@
 /* @group <article> */
 article {
 	position: absolute;
-	width: inherit;
+	width: 100% !important;
 	height: auto;
 	top: 0px;
 	bottom: 0px;
@@ -28,8 +28,6 @@ article {
     	visibility: visible;
 		z-index: 1;
 	}
-	
-	&.aside { .transform(translate3d(256px, 0, 0)); }
 	
 	& .title {
     	font-size: 1.1em;
