--- a/src/stylesheets/css/Lungo.layout.list.css
+++ b/src/stylesheets/css/Lungo.layout.list.css
@@ -1,4 +1,4 @@
-.list{width:inherit;font-size:1.15em;}.list a{display:block;}
+.list{font-size:1.15em;}.list a{display:block;}
 .list li:not(.toolbar){padding:8px 6px 8px 8px;list-style-type:none;}.list li:not(.toolbar) .icon,.list li:not(.toolbar) img{float:left;width:32px;height:32px;margin-right:6px;font-size:36px;font-weight:normal;}
 .list .icon,.list img{display:inline-block;}
 .list small{display:block;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;font-size:0.85em;}
