--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -8,7 +8,6 @@
  */
 
 @import "mixins.less";
-
 .form, form {
 	width: inherit !important;
 }
@@ -54,6 +53,7 @@ input[type=search] {
 
 select { 
 	width: 100%;
+	height: 29px;
 }
 
 label.select {
@@ -188,42 +188,42 @@ input[type="checkbox"]:checked + span::after,
 }
 /* @end */
 
-/* @group slider */
-/*
+/* @group range */
+
 input[type="range"] {
 	-webkit-appearance:	none;
-	outline: none;
 	height: 3px;
+	width: 100%;
+	outline: none;
 	border-radius: 1px;
 	position: relative;
 	padding: 0px;
 	margin: 0px;
+	margin-bottom: 4px !important;
 	
 	background-color: #c7c7c7;
 	
 	border: 0;
 	cursor: ew-resize;
-}
-	input[type="range"]:active { background-color: #34b7dc; }
-
-input[type="range"]::-webkit-slider-thumb {
-	-webkit-appearance:	none;	
-	position: relative;
-	z-index: 		1;
-
-	width: 12px;
-	height: 12px;
 	
-	border-radius: 6px;
-	background: #34b7dc;
-	box-shadow: inset 0px 0px 1px rgba(0,0,0,0.5);
+	&:active { background-color: #34b7dc; }
+	&::-webkit-slider-thumb {
+		-webkit-appearance:	none;	
+		position: relative;
+		z-index: 		1;
 	
-}
-	input[type="range"]:hover::-webkit-slider-thumb,
-	input[type="range"]:active::-webkit-slider-thumb {
-		box-shadow: 0px 0px 8px #34b7dc;
+		width: 24px;
+		height: 24px;
+		border-radius: 12px;
+		border: solid 7px rgba(255,255,255, 0.5);
+		
+		background: #34b7dc;
+		//box-shadow: inset 0px 0px 1px rgba(0,0,0,0.2);
 	}
-*/
+	&:active::-webkit-slider-thumb {
+		box-shadow: 0px 0px 4px #34b7dc;
+	}
+}
 /* @end */
 
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
