--- a/src/stylesheets/less/Lungo.theme.pro.less
+++ b/src/stylesheets/less/Lungo.theme.pro.less
@@ -111,8 +111,14 @@ aside {
 
 section.aside {
     box-shadow: -4px 0 8px rgba(0,0,0,0.5);
-    
 	&.onright { box-shadow: 4px 0 8px rgba(0,0,0,0.5); }
+}
+	
+@media handheld, only screen and (min-width: 768px) {
+	section.current, section.show {
+	    box-shadow: -4px 0 8px rgba(0,0,0,0.5);
+		&.onright { box-shadow: 4px 0 8px rgba(0,0,0,0.5); }
+	}
 }
 
 /* @end */
