--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -28,9 +28,10 @@ section {
 	-webkit-transition: -webkit-transform 250ms @defaultTrasition;
 	
 	&:first-child, &.show {	
-		.transform(translate3d(0%, 0, 0)); }
+		.transform(translate3d(0%, 0, 0));
+		visibility: visible; }
 	&.hide { 
-		.transform(translate3d(-100%, 0, 0)); }
+		.transform(translate3d(-100%, 0, 0));}
 }
 /* @end */
 
