--- a/src/stylesheets/less/Lungo.theme.pro.less
+++ b/src/stylesheets/less/Lungo.theme.pro.less
@@ -85,6 +85,11 @@ nav a {
 aside {
     background: #252525;
     
+    & .title {
+    	background: #101010;
+    	border:  none;
+	}
+    
     & a {
     	color: #fff;
 	    text-shadow: 0px 1px 0px #000;    
