--- a/src/stylesheets/css/Lungo.layout.article.css
+++ b/src/stylesheets/css/Lungo.layout.article.css
@@ -5,4 +5,4 @@ header:not(.extended)~article{top:40px;}
 header.extended~article{top:75px;}
 footer:not(.toolbar)~article{bottom:40px;}
 footer.toolbar~article{bottom:48px;}
-@media handheld, only screen and (min-width: 768px){article.aside{-webkit-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);}}
+@media handheld, only screen and (min-width: 768px){article.aside{-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-o-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);}}
