--- a/src/stylesheets/css/Lungo.theme.pro.css
+++ b/src/stylesheets/css/Lungo.theme.pro.css
@@ -183,8 +183,10 @@ section.aside.onright {
 .button {
   border-bottom: 1px inset rgba(0, 0, 0, 0.2);
   -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
   border-radius: 2px;
   -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
   background-clip: padding-box;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 3px rgba(0, 0, 0, 0.2);
 }
@@ -240,8 +242,10 @@ input[type="checkbox"]:checked + span, input[type="radio"]:checked + span {
 .bubble {
   color: #fff;
   -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
   border-radius: 2px;
   -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
   background-clip: padding-box;
   text-shadow: none;
   font-weight: bold !important;
