--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -2,6 +2,10 @@ section{position:absolute;left:0px;top:0px;width:100%;height:100%;z-index:1;-web
 section.hide{-webkit-transform:translate3d(-100%, 0, 0);-moz-transform:translate3d(-100%, 0, 0);-o-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0);}
 section.pop{-webkit-transform:scale(0.5);-moz-transform:scale(0.5);-o-transform:scale(0.5);transform:scale(0.5);opacity:0;-webkit-transition:all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);}section.pop:first-child,section.pop.show{-webkit-transform:scale(1);-moz-transform:scale(1);-o-transform:scale(1);transform:scale(1);opacity:1;}
 section.pop.hide{-webkit-transform:scale(1.2);-moz-transform:scale(1.2);-o-transform:scale(1.2);transform:scale(1.2);opacity:0;}
+section.flow{-webkit-transform:translate3d(100%, 0, 0) scale(0.7);-moz-transform:translate3d(100%, 0, 0) scale(0.7);-o-transform:translate3d(100%, 0, 0) scale(0.7);transform:translate3d(100%, 0, 0) scale(0.7);}section.flow:first-child,section.flow.show{-webkit-animation:flow-show 350ms 500ms cubic-bezier(0.39, 0.575, 0.565, 1) forwards;}
+section.flow.show-revoke{-webkit-animation:flow-show-revoke 350ms cubic-bezier(0.39, 0.575, 0.565, 1) forwards;}
+section.flow.hide{-webkit-animation:flow-hide 350ms cubic-bezier(0.39, 0.575, 0.565, 1) forwards;}
+section.flow.hide-revoke{-webkit-animation:flow-hide-revoke 350ms 500ms cubic-bezier(0.39, 0.575, 0.565, 1) forwards;}
 header,footer{position:absolute;left:0px;width:100%;height:38px;display:block;z-index:2;line-height:39px;}
 header{top:0px;}header .onleft{margin-left:4px !important;}
 header .onright{margin-right:4px !important;}
